# makina

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  haikal.toml
src/: Arena.h  Component.c  Component.h  Rec.h  fileops.c  main.c  vec3.h
